--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,18 @@ import groovy.json.JsonSlurper
 buildscript {
     ext.kotlin_version = '1.3.10'
     repositories {
-        google()
+//        google()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com/' }
+        maven { url "https://dl.google.com/dl/android/maven2/" }
+
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-rc2'
 
@@ -18,12 +25,13 @@ buildscript {
 
 allprojects {
     repositories {
+//        google()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
-        google()
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com/' }
+        maven { url "https://dl.google.com/dl/android/maven2/" }
     }
 }
 
