--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,7 +156,7 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.8.0', {
         exclude group: 'com.android.support'
     })
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:compiler:4.8.0'
     //joda time
     implementation 'joda-time:joda-time:2.9.9'
     // Tasker Plugin
