--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
 
-def AAVersion = '4.5.2'
+def AAVersion = '4.7.0'
 def SupportLibVersion = '28.0.0'
 
 configurations.all {
@@ -23,6 +23,11 @@ android {
         versionCode versions.appVersionCode
         versionName versions.appVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions{
+                includeCompileClasspath true
+            }
+        }
         multiDexEnabled true
     }
     buildTypes {
@@ -96,6 +101,7 @@ repositories {
 }
 
 dependencies {
+
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.1-alpha01', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -105,11 +111,15 @@ dependencies {
     // Android Annotations
     annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
-    // ButterKnife
-    implementation('com.jakewharton:butterknife:9.0.0-rc2', {
-        exclude group: 'com.android.support'
-    })
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
+
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
+//    // ButterKnife
+//    implementation('com.jakewharton:butterknife:9.0.0-rc2', {
+//        exclude group: 'com.android.support'
+//    })
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
     // Android supports
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.cardview:cardview:1.0.0'
